src/main/java/com/example/restapi/Error/ProductAlreadyExist.java
package com.example.restapi.Error;

public class ProductAlreadyExist extends RuntimeException{
    public ProductAlreadyExist(String message)
    {
        super(message);
    }
}
